# tcp_server

./: .env  Dockerfile  comandos.txt  pyproject.toml
tcp_server/: config.py  connection_handler.py  protocol.py  server.py  session.py
tests/: test_protocol.py  test_server.py
